--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Bandeau de Titre</h1>
 
-        <ul class="messages">
+        <ul id="messages" class="messages">
             <li>Message 1</li>
             <li>Message 2</li>
             <li>Message 3</li>
@@ -18,10 +18,8 @@
             <li>Message 5</li>
         </ul>
 
-        <form id="messageForm">
-            <textarea id="messageInput" placeholder="Votre message"></textarea>
-            <button type="submit">Envoyer</button>
-        </form>
+        <textarea id="messageInput" placeholder="Votre message"></textarea>
+        <button id="send" type="submit">Envoyer</button>
     </div>
     <script src="script.js"></script>
 </body>
