add send method

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </ul>
 
         <textarea id="messageInput" placeholder="Votre message"></textarea>
+        <button id="update" type="submit">Mettre à jour</button>
         <button id="send" type="submit">Envoyer</button>
     </div>
     <script src="script.js"></script>
