add websocket to automatically update on new messages

--- a/index.html
+++ b/index.html
@@ -10,16 +10,9 @@
     <div class="container">
         <h1>Bandeau de Titre</h1>
 
-        <ul id="messages" class="messages">
-            <li>Message 1</li>
-            <li>Message 2</li>
-            <li>Message 3</li>
-            <li>Message 4</li>
-            <li>Message 5</li>
-        </ul>
+        <ul id="messages" class="messages"></ul>
 
         <textarea id="messageInput" placeholder="Votre message"></textarea>
-        <button id="update" type="submit">Mettre à jour</button>
         <button id="send" type="submit">Envoyer</button>
     </div>
     <script src="script.js"></script>
