--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bandeau de Titre</h1>
+        <h1>Micro-Messaging</h1>
 
         <ul id="messages" class="messages"></ul>
 
